devops-doc/devops-docs/01-mnorouzi/k8s/workload/16-pv.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mci-app
  namespace: my-ns
  labels:
    app.kubernetes.io/name: mci-app
    app.kubernetes.io/env: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mci-app
      app.kubernetes.io/env: development
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mci-app
        app.kubernetes.io/env: development
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          volumeMounts:
          - name: nginx-html
            mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-html
          persistentVolumeClaim:
            claimName: pvc0001
