devops-doc/devops-docs/01-mnorouzi/k8s/workload/2-pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: my-ns
  name: app
spec:
  containers:
    - name: c01
      image: ubuntu
      command: ["/bin/bash", "-c", "while true; do echo hello-c01111111; sleep 2; done"]
    - name: c02
      image: ubuntu
      command: ["/bin/bash", "-c", "while true; do echo hello-c02222222; sleep 2; done"]
    - name: c03
      image: rockylinux:9.3
      command:
        - /bin/bash
        - -c
        - while true; do echo hello-c03333333; sleep 2; done
