devops-doc/devops-docs/01-mnorouzi/k8s/workload/7-deployment-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-app
  namespace: my-ns
  labels:
    app.kubernetes.io/name: sales-app
    app.kubernetes.io/env: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: sales-app
      app.kubernetes.io/env: development
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sales-app
        app.kubernetes.io/env: development
    spec:
      containers:
        - name: nginx
          image: nginx:1.26
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
