devops-doc/devops-docs/01-mnorouzi/k8s/workload/9-daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
    name: node-exporter
    namespace: my-ns
    labels:
        app: example
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: node-exporter
      app.kubernetes.io/env: development
      app.kubernetes.io/part-of: monitoring
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-exporter
        app.kubernetes.io/env: development
        app.kubernetes.io/part-of: monitoring
    spec:
      containers:
      - name: node-exporter
        image: prom/node-exporter:v1.9.0
